added check exercise link for convenient

--- a/exercise1-2/exercise1-2.html
+++ b/exercise1-2/exercise1-2.html
@@ -33,6 +33,7 @@
                     it can travel across the sky again.
                 </li>
             </ul>
+            <p>When you are finished, use <a href="check-exercise1-2.html">check-exercise1-2.html</a> to check your work.</p>
             <p>Expected output:</p>
             <p>
                 <video width="800" height="600" controls>
