--- a/exercise2-1/exercise2-1.html
+++ b/exercise2-1/exercise2-1.html
@@ -38,6 +38,7 @@ img.pixels[index] = newValue;
 
 img.updatePixels();
             </pre>
+            <p>When you are finished, use <a href="check-exercise2-1.html">check-exercise2-1.html</a> to check your work.</p>
             <p>Expected output:</p>
             <p>
                 <video width="400" height="300" controls>
