--- a/exercise2-2/exercise2-2.html
+++ b/exercise2-2/exercise2-2.html
@@ -44,6 +44,7 @@
             <p>The tests in check-exercise2-2.html will 
                 check the output of this function for you. When your function is working properly, you can use it 
                 to create your wipe effect. You will still need to figure out which pixels to change and how to change them.</p>
+            <p>When you are finished, use <a href="check-exercise2-2.html">check-exercise2-2.html</a> to check your work.</p>
             <p>Expected output:</p>
             <p>The following are examples of wipes you could create. Feel free to do something different!</p>
             <p>
