--- a/exercise1-1/exercise1-1.html
+++ b/exercise1-1/exercise1-1.html
@@ -23,6 +23,7 @@
                 image should slowly zoom in until the height of the displayed image is the same height as the original image 
                 and the cat's face takes up most of the canvas.
             </p>
+            <p>When you are finished, use <a href="check-exercise1-1.html">check-exercise1-1.html</a> to check your work.</p>
             <p>Expected output:</p>
             <p>
                 <video width="512" height="420" controls>
